--- a/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
+++ b/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Microsoft.Azure.Commands.StorageSync</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,8 +35,17 @@
     <DelaySign>true</DelaySign>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Diagnostics.Tracing.EventSource, Version=1.1.28.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\StorageSync\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.1.28\lib\net40\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\StorageSync\packages\Microsoft.PowerShell.4.ReferenceAssemblies.1.0.0\lib\net4\System.Management.Automation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,8 +54,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AFSCmdlet.cs" />
+    <Compile Include="AFSDirectoryInfo.cs" />
+    <Compile Include="AFSFileInfo.cs" />
+    <Compile Include="AFSFileSystemInfo.cs" />
+    <Compile Include="Cmdlets\InvokeAzureRMStorageSyncCompatibilityCheckCmdlet.cs" />
+    <Compile Include="IProgressReporter.cs" />
+    <Compile Include="NodeCounter.cs" />
+    <Compile Include="OutputWriters\AFSConsoleWriter.cs" />
+    <Compile Include="OutputWriters\ICmdlet.cs" />
+    <Compile Include="OutputWriters\IConsoleWriter.cs" />
+    <Compile Include="OutputWriters\IOutputWriter.cs" />
+    <Compile Include="OutputWriters\PSObjectsOutputWriter.cs" />
+    <Compile Include="OutputWriters\TextSummaryOutputWriter.cs" />
+    <Compile Include="ProgressReporter.cs" />
+    <Compile Include="Configuration.cs" />
+    <Compile Include="IConfiguration.cs" />
+    <Compile Include="IDirectoryInfo.cs" />
+    <Compile Include="IFileInfo.cs" />
+    <Compile Include="IFileSystemInfo.cs" />
+    <Compile Include="INamespaceEnumeratorListener.cs" />
+    <Compile Include="IPowershellCommandRunner.cs" />
+    <Compile Include="NamespaceEnumerator.cs" />
+    <Compile Include="NamespaceValidationsProcessor.cs" />
+    <Compile Include="PowerShellCommandRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemValidationsProcessor.cs" />
+    <Compile Include="TelemetryEventSource.cs" />
+    <Compile Include="TelemetryEventSourceContract.cs" />
+    <Compile Include="UNCNetworkConnector.cs" />
+    <Compile Include="Validations\AggregateValidations\AggregateValidation.cs" />
+    <Compile Include="Validations\AggregateValidations\MaximumDatasetSizeValidation.cs" />
+    <Compile Include="Validations\IValidationResult.cs" />
+    <Compile Include="Validations\NamespaceValidations\AFSPath.cs" />
+    <Compile Include="Validations\NamespaceValidations\FilenamesCharactersValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\INamespaceValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\InvalidFilenameValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\MaximumFilenameLengthValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\MaximumFileSizeValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\MaximumPathLengthValidation.cs" />
+    <Compile Include="Validations\NamespaceValidations\MaximumTreeDepthValidation.cs" />
+    <Compile Include="Validations\Result.cs" />
+    <Compile Include="Validations\ResultLevel.cs" />
+    <Compile Include="Validations\SystemValidations\FileSystemValidation.cs" />
+    <Compile Include="Validations\SystemValidations\ISystemValidation.cs" />
+    <Compile Include="Validations\SystemValidations\OSVersionValidation.cs" />
+    <Compile Include="Validations\ValidationResult.cs" />
+    <Compile Include="Validations\ValidationType.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\azure-powershell\src\Common\Commands.Common.Authentication.Abstractions\Commands.Common.Authentication.Abstractions.csproj">
@@ -68,7 +124,17 @@
       <Name>Commands.ScenarioTests.ResourceManager.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\StorageSync\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="Exists('..\StorageSync\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\StorageSync\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\StorageSync\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
