--- a/src/ResourceManager/EventHub/Commands.EventHub.Test/Commands.EventHubs.Test.csproj
+++ b/src/ResourceManager/EventHub/Commands.EventHub.Test/Commands.EventHubs.Test.csproj
@@ -186,7 +186,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="SessionRecords\Microsoft.Azure.Commands.EventHub.Test.ScenarioTests.EventHubsConsumerGroupsSkipTopTests\EventHubsConsumerGroupsskiptop.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="SessionRecords\Microsoft.Azure.Commands.EventHub.Test.ScenarioTests.EventHubsTests\EventHubsAuthorizationRulesCRUD.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
