--- a/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
+++ b/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
@@ -28,7 +28,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WindowsAzure.Storage" Version="9.2.0" />
+    <Reference Include="Microsoft.WindowsAzure.Storage">
+      <HintPath>..\..\..\tools\LocalFeed\WindowsAzure.Storage.9.2.0\netstandard1.3\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    </Reference>
     <PackageReference Include="Microsoft.Azure.Storage.DataMovement" Version="0.7.1.16" />
   </ItemGroup>
 
