--- a/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
@@ -84,6 +84,24 @@
     <Compile Include="Failover Group\Model\AllowReadOnlyFailoverToPrimary.cs" />
     <Compile Include="Failover Group\Services\AzureSqlFailoverGroupAdapter.cs" />
     <Compile Include="Failover Group\Services\AzureSqlFailoverGroupCommunicator.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\AzureSqlManagedDatabaseCmdletBase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\GetAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\NewAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\RemoveAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\RestoreAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Model\AzureSqlManagedDatabaseModel.cs" />
+    <Compile Include="ManagedDatabase\Services\AzureSqlManagedDatabaseAdapter.cs" />
+    <Compile Include="ManagedDatabase\Services\AzureSqlManagedDatabaseCommunicator.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\GetAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\ManagedInstanceCmdletBase.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\NewAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\RemoveAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\SetAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\UpdateAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Model\AzureSqlManagedInstanceModel.cs" />
+    <Compile Include="ManagedInstance\Model\ManagedInstanceSku.cs" />
+    <Compile Include="ManagedInstance\Services\AzureSqlManagedInstanceAdapter.cs" />
+    <Compile Include="ManagedInstance\Services\AzureSqlManagedInstanceCommunicator.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlDatabaseRecommendedActionCmdletBase.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlElasticPoolRecommendedActionCmdletBase.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlServerRecommendedActionCmdletBase.cs" />
@@ -457,7 +475,7 @@
     </ProjectReference>
     <Reference Include="Microsoft.Azure.Management.Sql, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Sql.1.13.0-preview\lib\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Sql.1.13.1-preview\lib\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.Storage">
