--- a/src/ResourceManager/StorageSync/Commands.StorageSync.Test/Commands.StorageSync.Test.csproj
+++ b/src/ResourceManager/StorageSync/Commands.StorageSync.Test/Commands.StorageSync.Test.csproj
@@ -171,6 +171,12 @@
     <None Include="ScenarioTests\StorageSyncTests.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="SessionRecords\Microsoft.Azure.Commands.StorageSync.Test.ScenarioTests.StorageSyncTests\TestStorageSync.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\tools\Common.Dependencies.Test.targets" />
