--- a/src/ResourceManager/RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery/packages.config
+++ b/src/ResourceManager/RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
   <package id="Microsoft.Azure.Management.RecoveryServices" version="4.2.0-preview" targetFramework="net45" />
-  <package id="Microsoft.Azure.Management.RecoveryServices.SiteRecovery" version="1.1.2-preview" targetFramework="net452" />
+  <package id="Microsoft.Azure.Management.RecoveryServices.SiteRecovery" version="1.1.5-alpha" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
