--- a/src/ResourceManager/Maps/Commands.Maps/Commands.Maps.csproj
+++ b/src/ResourceManager/Maps/Commands.Maps/Commands.Maps.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CFDE176D-2F12-4730-88B1-2722E986F4B1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.Azure.Commands.LocationBasedServices</RootNamespace>
-    <AssemblyName>Microsoft.Azure.Commands.LocationBasedServices</AssemblyName>
+    <RootNamespace>Microsoft.Azure.Commands.Maps</RootNamespace>
+    <AssemblyName>Microsoft.Azure.Commands.Maps</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Package\Debug\ResourceManager\AzureResourceManager\AzureRM.LocationBasedServices\</OutputPath>
+    <OutputPath>..\..\..\Package\Debug\ResourceManager\AzureResourceManager\AzureRM.Maps\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -32,7 +32,7 @@
     <DebugType>pdbonly</DebugType>
     <DefineConstants>TRACE;SIGN</DefineConstants>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\Package\Release\ResourceManager\AzureResourceManager\AzureRM.LocationBasedServices\</OutputPath>
+    <OutputPath>..\..\..\Package\Release\ResourceManager\AzureResourceManager\AzureRM.Maps\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <CodeAnalysisLogFile>bin\Release\Microsoft.Azure.Commands.LocationBasedServices.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
@@ -54,19 +54,20 @@
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LocationBasedServicesAccount\GetAzureLocationBasedServicesAccount.cs" />
-    <Compile Include="LocationBasedServicesAccount\GetAzureLocationBasedServicesAccountKey.cs" />
-    <Compile Include="LocationBasedServicesAccount\LocationBasedServicesAccountBaseCmdlet.cs" />
-    <Compile Include="LocationBasedServicesAccount\LocationBasedServicesManagementClient.cs" />
-    <Compile Include="LocationBasedServicesAccount\NewAzureLocationBasedServicesAccount.cs" />
-    <Compile Include="LocationBasedServicesAccount\NewAzureLocationBasedServicesAccountKey.cs" />
-    <Compile Include="LocationBasedServicesAccount\RemoveAzureLocationBasedServicesAccount.cs" />
-    <Compile Include="Models\PSLocationBasedServicesAccount.cs" />
-    <Compile Include="Models\PSLocationBasedServicesAccountSku.cs" />
-    <Compile Include="Models\PSLocationBasedServicesAccountKeys.cs" />
+    <Compile Include="MapsAccount\GetAzureMapsAccount.cs" />
+    <Compile Include="MapsAccount\GetAzureMapsAccountKey.cs" />
+    <Compile Include="MapsAccount\MapsAccountBaseCmdlet.cs" />
+    <Compile Include="MapsAccount\MapsManagementClient.cs" />
+    <Compile Include="MapsAccount\NewAzureMapsAccount.cs" />
+    <Compile Include="MapsAccount\NewAzureMapsAccountKey.cs" />
+    <Compile Include="MapsAccount\RemoveAzureMapsAccount.cs" />
+    <Compile Include="Models\PSMapsAccount.cs" />
+    <Compile Include="Models\PSMapsAccountSku.cs" />
+    <Compile Include="Models\PSMapsAccountKeys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -75,11 +76,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\AzureRM.LocationBasedServices.psd1">
-      <Link>AzureRM.LocationBasedServices.psd1</Link>
+    <None Include="..\AzureRM.Maps.psd1">
+      <Link>AzureRM.Maps.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Microsoft.Azure.Commands.LocationBasedServices.format.ps1xml">
+    <None Include="Microsoft.Azure.Commands.Maps.format.ps1xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="MSSharedLibKey.snk" />
@@ -105,6 +106,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
