Fixed DataFactories desktop and netcore tests. Some netcore tests run, but the main ones need this to be completed, so it has a netcore management library. https://github.com/Azure/azure-powershell/issues/6085 I did not add DataFactories to the solution for this reason.

--- a/src/ResourceManager/DataFactories/Commands.DataFactories.Test/Commands.DataFactories.Test.Netcore.csproj
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories.Test/Commands.DataFactories.Test.Netcore.csproj
@@ -22,10 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.KeyVault.Core" Version="1.0.0" />
     <PackageReference Include="Microsoft.Azure.Management.DataFactories" Version="4.13.0" />
     <PackageReference Include="Microsoft.DataTransfer.Gateway.Encryption" Version="3.4.6604.1" />
-    <PackageReference Include="Moq" Version="4.2.1510.2205" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +31,12 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common\Common.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ScenarioTests.ResourceManager.Common\Common.ResourceManager.ScenarioTests.Netcore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.Azure.Commands.DataFactories">
+      <HintPath>..\..\..\Package\$(Configuration)\ResourceManager\AzureResourceManager\AzureRM.DataFactories.Netcore\Microsoft.Azure.Commands.DataFactories.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
