--- a/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
+++ b/src/Storage/Commands.Storage/Commands.Storage.Netcore.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAzure.Storage" Version="9.2.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.2.0" />
     <PackageReference Include="Microsoft.Azure.Storage.DataMovement" Version="0.7.2" />
   </ItemGroup>
 
