add the rest of the help files

--- a/src/ResourceManager/KeyVault/KeyVaultProvider/Commands.KeyVault.Provider.csproj
+++ b/src/ResourceManager/KeyVault/KeyVaultProvider/Commands.KeyVault.Provider.csproj
@@ -94,6 +94,9 @@
       <Name>Commands.KeyVault</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Microsoft.Azure.Commands.KeyVault.Provider.dll-Help.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
   <Target Name="AfterBuild">
