--- a/src/ResourceManager/Maps/Commands.Maps/Commands.Maps.csproj
+++ b/src/ResourceManager/Maps/Commands.Maps/Commands.Maps.csproj
@@ -34,7 +34,7 @@
     <Optimize>true</Optimize>
     <OutputPath>..\..\..\Package\Release\ResourceManager\AzureResourceManager\AzureRM.Maps\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <CodeAnalysisLogFile>bin\Release\Microsoft.Azure.Commands.LocationBasedServices.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisLogFile>bin\Release\Microsoft.Azure.Commands.Maps.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
     <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
     <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
     <ErrorReport>prompt</ErrorReport>
@@ -48,8 +48,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Azure.Management.LocationBasedServices, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.LocationBasedServices.1.0.0\lib\net452\Microsoft.Azure.Management.LocationBasedServices.dll</HintPath>
+    <Reference Include="Microsoft.Azure.Management.Maps, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Maps.1.0.0\lib\net452\Microsoft.Azure.Management.Maps.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System.Drawing" />
