--- a/src/ResourceManager/Maps/Maps.Test/Commands.Maps.Test.csproj
+++ b/src/ResourceManager/Maps/Maps.Test/Commands.Maps.Test.csproj
@@ -51,8 +51,8 @@
     <Reference Include="Microsoft.Azure.Management.Authorization">
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.1.0.0\lib\net40\Microsoft.Azure.Management.Authorization.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Azure.Management.LocationBasedServices, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.LocationBasedServices.1.0.0\lib\net452\Microsoft.Azure.Management.LocationBasedServices.dll</HintPath>
+    <Reference Include="Microsoft.Azure.Management.Maps, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Maps.1.0.0\lib\net452\Microsoft.Azure.Management.Maps.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.ResourceManager, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
