--- a/src/Storage/Commands.Storage/packages.config
+++ b/src/Storage/Commands.Storage/packages.config
@@ -12,4 +12,5 @@
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net452" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net452" />
 </packages>
