--- a/src/ResourceManager/Storage/Commands.Management.Storage.Test/packages.config
+++ b/src/ResourceManager/Storage/Commands.Management.Storage.Test/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure.TestFramework" version="1.5.0-preview" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" /> 
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
