--- a/src/ResourceManager/Storage/Commands.Management.Storage/packages.config
+++ b/src/ResourceManager/Storage/Commands.Management.Storage/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net452" />
 </packages>
